2003-05-17  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add a toolbar icon ( i.e. GUIAction ) for constructing an angle
		bisector..

2003-05-15  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* take advantage of the new invalid coordinate when creating circles
		and arcs through three aligned points

2003-05-13  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix compilation with --enable-final

2003-05-12  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix a crash bug for macro's involving PropertyImp

	* update the AboutData: upgrade some people to authors, and add
		credit for some more people..  

	* add an angle bisector property

2003-05-10  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the transformation types for cases where the object being
		transformed is the same as one of the arguments that the
		transformation needs..  E.g. right-click on a
		point->transform->reflect over a point works properly
		point->transform->now.. 

2003-05-09  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* the drawLocus is now changed to function as a generic drawCurve.
		The changes are very little, and the locusCalcPoint is no
		longer necessary.  It seems that performance is not affected
		significantly.  The drawCubic is not used any longer; it is
		still there in kigpainter, but can be purged as soon as
		no problems arise with the new setup.  The generic drawCurve
		is used in place of drawCubic.

2003-05-08  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add support for quite some more types to the kseg import filter

2003-05-08  Maurizio Paolini  <paolini@dmf.unicatt.it>

        * fixed drawing problem while building a cubic by 9 points.  The
		problem was located in calcCubicRoot when the degree is
		less than 3

2003-05-08  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add some properties to the arc object
